# hackernewsdiscordfeed

./: .env.sample  .gitignore  README.md  pyproject.toml
hackernewsdiscordfeed/: __init__.py  bot.py  hackernews.py
tests/: test_hackernews.py
